# TileOPs

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .test-e2e-done-criteria  .yamllint.yml  CHANGELOG.md  CLAUDE.md  Claude.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  OPTIMIZATION_LESSONS.md  README.md  THIRD_PARTY_NOTICES.md  autotune_chunk_scan_all_shapes.py  autotune_results.json  autotune_results.md  bench_chunk_scan_all_shapes.py  bench_results.xml  ci-test.sh  constraints.txt  debug_dq.py  find_fa3.py  format.sh  manifest-benchmark.json  manifest-implemented.json  manifest-stats.json  manifest-stats.md  meta.json  ops_manifest.yaml  pr_description.md  profile-run.sh  profile-test.sh  pyproject.toml  requirements-lint.txt  requirements.txt  review_loop.sh  ruff.toml  (+7 more)
.claude/: settings.json
.claude/commit/: SKILL.md
.claude/conventions/: types.sh
.claude/create-new-kernel/: skill.md
.claude/create-new-op/: skill.md
.claude/create-new-op-attention/: skill.md
.claude/create-new-op-test/: skill.md
.claude/creating-pull-request/: SKILL.md
.claude/domain-rules/: benchmark.md  design-docs.md  manifest-spec.md  manifest-validator.md  ops-design.md  testing-budget.md
.claude/migrating-new-op/: SKILL.md
.claude/review-checklists/: approval-gate.md  benchmark.md  doc.md  feature.md  manifest.md  pre-review.md  refactor.md  testing.md
.claude/review-rules/: bugfix.md  design-doc.md  doc.md  feature.md  manifest-add.md  manifest-flip.md  manifest.md  refactor.md
.claude/rules/: benchmark.md  code-style.md  manifest-trust-model.md  manifest-validator.md  ops-design.md  reviewer-rule-list.md  security.md  testing-budget.md
.claude/scripts/: poll-pr-status.sh
.foundry/: config.json
.foundry/drafts/: issue-draft-20260317-refined-424.md
.foundry/migrations/: reduction.json
.foundry/mold/: benchmark-template.md  body-sections.md  op-readiness-checklist.md  pr-body-template.md  pre-create-checks.md  title-format.md
.foundry/scripts/: validate.sh
.github/: actionlint.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_operator.md  new_operator_subtask.md
.github/runner/: Dockerfile  README.md  entrypoint.sh
.github/workflows/: auto-label.yml  ci.yml  container-smoke.yml  fork-gate.yml  gpu-smoke.yml  issue-label.yml  manifest-stats.yml  nightly-containerized-smoke.yml  nightly.yml  pr-validation.yml  preflight.yml  runner-maintenance.yml  stale-issues.yml
benchmarks/: __init__.py  benchmark.py  benchmark_base.py  conftest.py  profile_run.sh  profile_run2.sh  select_nightly_benchmarks.py
benchmarks/deepseek_mla/: __init__.py  deepseek_dsa_decode.py  deepseek_dsa_fused.py  deepseek_mla_decode.py  fp8_lighting_indexer.py  fp8_quant  fp8_quant.py  topk_selector.py
benchmarks/deepseek_nsa/: __init__.py  deepseek_nsa.py  utils.py
benchmarks/flash_attn/: __init__.py  gqa.py  mha.py
benchmarks/flash_decode/: __init__.py  gqa_decode.py  gqa_decode_paged.py  mha_decode.py  mha_decode_paged.py  mla_decode.py  sparse_mla.py
benchmarks/flash_decoding/: __init__.py  gqa_decode.py  mha_decode.py
benchmarks/gemm/: __init__.py  gemm.py
benchmarks/gemv/: __init__.py  gemv.py
conv2d_output_res/: benchmark_compare_1x1.md  resnet-1x1-fp16_cuda_analysis.md  resnet-1x1-fp16_tileops_kernel.cu
docs/: CONTRIBUTING.md  DEVELOPMENT.md  README.md  architecture.md  benchmark-workload-interface.md  ci-host.md  fft-optimization.md  kernel-op-conventions.md  known-issues.md  manifest.md  naming-convention.md  ops-design-reference.md  ops-design.md  roofline.md  testing.md  tileops-skills.md  trust-model.md  workflow.md
issues/: 2026-03-12-additional-tune-true-blockers.md  2026-03-12-decode-tune-true-blockers.md
mid_res/: tl019_attention_remaining_skips.md  tl019_batch_norm_persistent_hang.md  tl019_linear_recurrent_remaining_skips.md  tl019_other_operators_remaining_skips.md
profile/: common_tools.py  mha_decode_profile_test.py  mha_profile_test.py
scripts/: bench_shapes_comparison.sh  bench_ssd_state_passing_quick.py  ci_venv_hash.py  conftest_warmup.py  dep_hash.py  detect_antipatterns.py  dev_setup.sh  generate_gpu_profile.py  gpu_smoke_report.py  manifest_stats.py  migrate_perf_history.py  ncu_ssd_state_passing.py  nightly_report.py  reclaim_cache.sh  test_node_delta.py  validate_manifest.py  warmup_kernel_cache.py
tests/: ci_test.sh  conftest.py  profile_run.py  test_autotune.py  test_base.py  test_benchmark_record.py  test_benchmark_timing.py  test_bitnet.py  test_blocksparse_attention.py  test_blocksparseattention.py  test_ci_venv_hash.py  test_compile.py  test_dtype_codegen.py  test_elementwise_caching_autotune.py  test_elementwise_compile.py  test_elementwise_config_dtype.py  test_elementwise_fp8.py  test_elementwise_independent_fp8.py  test_elementwise_strategy_bench.py  test_elementwise_strategy_validation.py  test_gemm_torch.py  test_gemm_triton.py  test_gpu_smoke_policy.py  test_gqa.py  test_gqa_decode.py  test_grouped_gemm_torch.py  test_grouped_gemm_triton.py  test_linear_attn.py  test_linear_attn_fused_chunk.py  test_linear_attn_fused_recurrent.py  test_mamba_chunk_scan.py  test_mamba_chunk_state.py  test_mha.py  test_mha_decode.py  test_mha_decode_fn.py  test_mha_fn.py  test_migrate_perf_history.py  test_mla.py  test_mla_decode_fn.py  test_no_assert_validation.py  (+17 more)
tileops/: __init__.py  manifest.py  manifest_legacy_roofline.py  ops_manifest.yaml
tla/: __init__.py
tools/: reflow_comments.py
top/: __init__.py
workloads/: __init__.py  activation.py  ada_layer_norm.py  ada_layer_norm_zero.py  argreduce.py  base.py  batch_norm.py  binary_arith.py  bmm.py  deltanet.py  engram.py  fft.py  fp8_lighting_indexer.py  fp8_lightning_indexer.py  fp8_quant.py  fused_add_layer_norm.py  fused_add_rms_norm.py  gated_deltanet.py  gated_deltanet_recurrence.py  gemm.py  gla.py  group_norm.py  grouped_gemm.py  instance_norm.py  layer_norm.py  logical_reduce.py  mamba.py  mamba2_e2e.py  mhc.py  moe.py  nsa_utils.py  reduce.py  rms_norm.py  softmax.py  topk_selector.py  vector_norm.py  workload_base.py
(+1234 files in other folders)
