[project]
name = "tileops"
version = "0.0.1.dev2"
description = "TileOPs kernels for efficient LLM inference."
readme = "README.md"
authors = [{ name="Tile-AI"}]
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.23.5",
    "einops>=0.6.0",
    "Cython",
    "tqdm>=4.62.3",
    "typing_extensions>=4.10.0",
    "cloudpickle",
    "ml_dtypes",
    "psutil",
    "tilelang>=0.1.6.post1"
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
"yapf==0.40.2",
"toml==0.10.2",
"tomli==2.0.1",
"ruff==0.6.5",
"codespell==2.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "tests.*", "benchmarks", "benchmarks.*"]

[tool.yapf]
based_on_style = "yapf"
column_limit = 100
indent_width = 4
spaces_before_comment = 2

# Using ruff's isort instead of standalone isort (configured below in [tool.ruff.lint.isort])
# [tool.isort]
# line_length = 100
# multi_line_output = 3
# indent = "    "
# known_first_party = ["tileops"]
# skip_gitignore = true

[tool.codespell]
ignore-words-list = "nd, te, ist, LOD, offen, NotIn, HSA"
skip = [
    "build",
    "dist",
    ".venv"
]

# Global ruff configuration
[tool.ruff]
line-length = 100  # Match yapf's column_limit

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort (using ruff's isort instead of standalone isort)
    "I",
]
ignore = [
    # Module level import not at top of file
    "E402",
    # star imports
    "F405", "F403",
    # ambiguous name
    "E741",
    # line too long
    "E501",
    # key in dict.keys()
    "SIM118",
    # memory leaks
    "B019",
    # No such file or directory
    "E902",
]

# Configure ruff's isort to be compatible with yapf
# Note: line-length is controlled by [tool.ruff] section, not here
[tool.ruff.lint.isort]
known-first-party = ["tileops"]
