[project]
name = "tileops"
version = "0.0.1.dev2"
description = "TileOPs kernels for efficient LLM inference."
readme = "README.md"
authors = [{ name="Tile-AI"}]
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.23.5",
    "einops>=0.6.0",
    "Cython",
    "tqdm>=4.62.3",
    "typing_extensions>=4.10.0",
    "cloudpickle",
    "ml_dtypes",
    "psutil",
    "tilelang>=0.1.7"
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
"yapf==0.43.0",
"toml==0.10.2",
"tomli==2.0.1",
"ruff==0.6.5",
"codespell==2.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "tests.*", "benchmarks", "benchmarks.*"]

[tool.yapf]
based_on_style = "yapf"
column_limit = 100
indent_width = 4
spaces_before_comment = 2

[tool.codespell]
ignore-words-list = "nd, te, ist, LOD, offen, NotIn, HSA"
skip = [
    "build",
    "dist",
    ".venv"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pydocstyle (Google Docstrings)
    # "D",
    # pep8-naming (naming conventions)
    "N",
    # flake8-annotations (type hints)
    "ANN",
]
ignore = [
    # ambiguous name
    "E741",
    # key in dict.keys()
    "SIM118",
    # memory leaks
    "B019",
    # No such file or directory
    "E902",
    # flake8-annotations: ignore self/cls/args/kwargs
    "ANN101", "ANN102", "ANN002", "ANN003",
    # pep8-naming: allow 'import as T'
    "N812",
    # pydocstyle: missing docstring in public module
    "D100",
    # pydocstyle: missing docstring in public package
    "D104",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["tileops"]
